--- a/vite-manifest.json
+++ b/vite-manifest.json
@@ -1,11 +1,11 @@
 {
   "node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "_app/immutable/start-b6bc1b88.js",
+    "file": "app/immutable/start-b6e2eeeb.js",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/start.js",
     "isEntry": true,
     "imports": [
-      "_index-903f4e19.js",
-      "_singletons-4603b5ee.js"
+      "_index-4b541edf.js",
+      "_singletons-4aa3bc8f.js"
     ],
     "dynamicImports": [
       ".svelte-kit/generated/nodes/0.js",
@@ -17,151 +17,151 @@
     ]
   },
   "src/routes/+layout.svelte": {
-    "file": "_app/immutable/components/pages/_layout.svelte-ac8ac666.js",
+    "file": "app/immutable/components/pages/_layout.svelte-683465e0.js",
     "src": "src/routes/+layout.svelte",
     "isEntry": true,
     "imports": [
-      "_index-903f4e19.js",
-      "_stores-ae091cb3.js",
-      "_singletons-4603b5ee.js",
-      "_index-4de8be6c.js"
+      "_index-4b541edf.js",
+      "_stores-b9b0a01c.js",
+      "_singletons-4aa3bc8f.js",
+      "_index-a10987e7.js"
     ],
     "css": [
-      "_app/immutable/assets/_layout-cb0a3bb0.css"
+      "app/immutable/assets/_layout-cb0a3bb0.css"
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/components/error.svelte": {
-    "file": "_app/immutable/components/error.svelte-32297589.js",
+    "file": "app/immutable/components/error.svelte-4fc32191.js",
     "src": "node_modules/@sveltejs/kit/src/runtime/components/error.svelte",
     "isEntry": true,
     "imports": [
-      "_index-903f4e19.js",
-      "_stores-ae091cb3.js"
+      "_index-4b541edf.js",
+      "_stores-b9b0a01c.js"
     ]
   },
   "src/routes/+page.svelte": {
-    "file": "_app/immutable/components/pages/_page.svelte-2380c6b6.js",
+    "file": "app/immutable/components/pages/_page.svelte-f007047f.js",
     "src": "src/routes/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index-903f4e19.js",
-      "_constants-c3307eea.js"
+      "_index-4b541edf.js",
+      "_constants-a381f266.js"
     ],
     "css": [
-      "_app/immutable/assets/_page-0d38cde0.css"
+      "app/immutable/assets/_page-0d38cde0.css"
     ]
   },
   "src/routes/about/+page.svelte": {
-    "file": "_app/immutable/components/pages/about/_page.svelte-bc617e94.js",
+    "file": "app/immutable/components/pages/about/_page.svelte-81ac69e6.js",
     "src": "src/routes/about/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index-903f4e19.js",
-      "_constants-c3307eea.js",
-      "_index-4de8be6c.js"
+      "_index-4b541edf.js",
+      "_constants-a381f266.js",
+      "_index-a10987e7.js"
     ],
     "css": [
-      "_app/immutable/assets/_page-c8a605be.css"
+      "app/immutable/assets/_page-c8a605be.css"
     ]
   },
   "src/routes/contact/+page.svelte": {
-    "file": "_app/immutable/components/pages/contact/_page.svelte-73b88364.js",
+    "file": "app/immutable/components/pages/contact/_page.svelte-23a4bba4.js",
     "src": "src/routes/contact/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index-903f4e19.js",
-      "_constants-c3307eea.js"
+      "_index-4b541edf.js",
+      "_constants-a381f266.js"
     ],
     "css": [
-      "_app/immutable/assets/_page-c8a605be.css"
+      "app/immutable/assets/_page-c8a605be.css"
     ]
   },
   "src/routes/projects/+page.svelte": {
-    "file": "_app/immutable/components/pages/projects/_page.svelte-890d161a.js",
+    "file": "app/immutable/components/pages/projects/_page.svelte-9a3b790e.js",
     "src": "src/routes/projects/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index-903f4e19.js",
-      "_constants-c3307eea.js"
+      "_index-4b541edf.js",
+      "_constants-a381f266.js"
     ],
     "css": [
-      "_app/immutable/assets/_page-dea61fd1.css"
+      "app/immutable/assets/_page-dea61fd1.css"
     ]
   },
   "src/routes/+page.js": {
-    "file": "_app/immutable/modules/pages/_page.js-07d4ebd9.js",
+    "file": "app/immutable/modules/pages/_page.js-88adba79.js",
     "src": "src/routes/+page.js",
     "isEntry": true,
     "imports": [
-      "__page-d86dbbba.js"
+      "__page-236610da.js"
     ]
   },
   "src/routes/about/+page.js": {
-    "file": "_app/immutable/modules/pages/about/_page.js-e8ccd219.js",
+    "file": "app/immutable/modules/pages/about/_page.js-ee0677a8.js",
     "src": "src/routes/about/+page.js",
     "isEntry": true,
     "imports": [
-      "__page-0b0d8028.js"
+      "__page-d655a3d5.js"
     ]
   },
   "src/routes/contact/+page.js": {
-    "file": "_app/immutable/modules/pages/contact/_page.js-344d4a79.js",
+    "file": "app/immutable/modules/pages/contact/_page.js-39cb7bbb.js",
     "src": "src/routes/contact/+page.js",
     "isEntry": true,
     "imports": [
-      "__page-42553da0.js"
+      "__page-dc7ac684.js"
     ]
   },
   "src/routes/projects/+page.js": {
-    "file": "_app/immutable/modules/pages/projects/_page.js-aa28b609.js",
+    "file": "app/immutable/modules/pages/projects/_page.js-421aae66.js",
     "src": "src/routes/projects/+page.js",
     "isEntry": true,
     "imports": [
-      "__page-046269aa.js"
+      "__page-5f4c1ab8.js"
     ]
   },
-  "_singletons-4603b5ee.js": {
-    "file": "_app/immutable/chunks/singletons-4603b5ee.js",
+  "_singletons-4aa3bc8f.js": {
+    "file": "app/immutable/chunks/singletons-4aa3bc8f.js",
     "imports": [
-      "_index-903f4e19.js"
+      "_index-4b541edf.js"
     ]
   },
-  "_index-903f4e19.js": {
-    "file": "_app/immutable/chunks/index-903f4e19.js"
+  "_index-4b541edf.js": {
+    "file": "app/immutable/chunks/index-4b541edf.js"
   },
-  "_stores-ae091cb3.js": {
-    "file": "_app/immutable/chunks/stores-ae091cb3.js",
+  "_stores-b9b0a01c.js": {
+    "file": "app/immutable/chunks/stores-b9b0a01c.js",
     "imports": [
-      "_index-903f4e19.js",
-      "_singletons-4603b5ee.js"
+      "_index-4b541edf.js",
+      "_singletons-4aa3bc8f.js"
     ]
   },
-  "_index-4de8be6c.js": {
-    "file": "_app/immutable/chunks/index-4de8be6c.js",
+  "_index-a10987e7.js": {
+    "file": "app/immutable/chunks/index-a10987e7.js",
     "imports": [
-      "_index-903f4e19.js"
+      "_index-4b541edf.js"
     ],
     "css": [
-      "_app/immutable/assets/index-af927694.css"
+      "app/immutable/assets/index-af927694.css"
     ]
   },
-  "_constants-c3307eea.js": {
-    "file": "_app/immutable/chunks/constants-c3307eea.js"
+  "_constants-a381f266.js": {
+    "file": "app/immutable/chunks/constants-a381f266.js"
   },
-  "__page-d86dbbba.js": {
-    "file": "_app/immutable/chunks/_page-d86dbbba.js"
+  "__page-236610da.js": {
+    "file": "app/immutable/chunks/_page-236610da.js"
   },
-  "__page-0b0d8028.js": {
-    "file": "_app/immutable/chunks/_page-0b0d8028.js"
+  "__page-d655a3d5.js": {
+    "file": "app/immutable/chunks/_page-d655a3d5.js"
   },
-  "__page-42553da0.js": {
-    "file": "_app/immutable/chunks/_page-42553da0.js"
+  "__page-dc7ac684.js": {
+    "file": "app/immutable/chunks/_page-dc7ac684.js"
   },
-  "__page-046269aa.js": {
-    "file": "_app/immutable/chunks/_page-046269aa.js"
+  "__page-5f4c1ab8.js": {
+    "file": "app/immutable/chunks/_page-5f4c1ab8.js"
   },
   ".svelte-kit/generated/nodes/0.js": {
-    "file": "_app/immutable/chunks/0-c7fa67a2.js",
+    "file": "app/immutable/chunks/0-4f9ad534.js",
     "src": ".svelte-kit/generated/nodes/0.js",
     "isDynamicEntry": true,
     "imports": [
@@ -169,7 +169,7 @@
     ]
   },
   ".svelte-kit/generated/nodes/1.js": {
-    "file": "_app/immutable/chunks/1-e20d43f0.js",
+    "file": "app/immutable/chunks/1-f1fcd522.js",
     "src": ".svelte-kit/generated/nodes/1.js",
     "isDynamicEntry": true,
     "imports": [
@@ -177,59 +177,59 @@
     ]
   },
   ".svelte-kit/generated/nodes/2.js": {
-    "file": "_app/immutable/chunks/2-721a7777.js",
+    "file": "app/immutable/chunks/2-a79b706f.js",
     "src": ".svelte-kit/generated/nodes/2.js",
     "isDynamicEntry": true,
     "imports": [
-      "__page-d86dbbba.js",
+      "__page-236610da.js",
       "src/routes/+page.svelte"
     ]
   },
   ".svelte-kit/generated/nodes/3.js": {
-    "file": "_app/immutable/chunks/3-46488362.js",
+    "file": "app/immutable/chunks/3-45caa82f.js",
     "src": ".svelte-kit/generated/nodes/3.js",
     "isDynamicEntry": true,
     "imports": [
-      "__page-0b0d8028.js",
+      "__page-d655a3d5.js",
       "src/routes/about/+page.svelte"
     ]
   },
   ".svelte-kit/generated/nodes/4.js": {
-    "file": "_app/immutable/chunks/4-ae65f541.js",
+    "file": "app/immutable/chunks/4-9ad108c2.js",
     "src": ".svelte-kit/generated/nodes/4.js",
     "isDynamicEntry": true,
     "imports": [
-      "__page-42553da0.js",
+      "__page-dc7ac684.js",
       "src/routes/contact/+page.svelte"
     ]
   },
   ".svelte-kit/generated/nodes/5.js": {
-    "file": "_app/immutable/chunks/5-629769cf.js",
+    "file": "app/immutable/chunks/5-a3692756.js",
     "src": ".svelte-kit/generated/nodes/5.js",
     "isDynamicEntry": true,
     "imports": [
-      "__page-046269aa.js",
+      "__page-5f4c1ab8.js",
       "src/routes/projects/+page.svelte"
     ]
   },
   "index.css": {
-    "file": "_app/immutable/assets/index-af927694.css",
+    "file": "app/immutable/assets/index-af927694.css",
     "src": "index.css"
   },
-  "src/routes/contact/+page.css": {
-    "file": "_app/immutable/assets/_page-c8a605be.css",
-    "src": "src/routes/contact/+page.css"
-  },
   "src/routes/+page.css": {
-    "file": "_app/immutable/assets/_page-0d38cde0.css",
+    "file": "app/immutable/assets/_page-0d38cde0.css",
     "src": "src/routes/+page.css"
   },
-  "src/routes/projects/+page.css": {
-    "file": "_app/immutable/assets/_page-dea61fd1.css",
-    "src": "src/routes/projects/+page.css"
+  "src/routes/about/+page.css": {
+    "file": "app/immutable/assets/_page-c8a605be.css",
+    "src": "src/routes/about/+page.css"
   },
   "src/routes/+layout.css": {
-    "file": "_app/immutable/assets/_layout-cb0a3bb0.css",
+    "file": "app/immutable/assets/_layout-cb0a3bb0.css",
     "src": "src/routes/+layout.css"
+  },
+  "src/routes/projects/+page.css": {
+    "file": "app/immutable/assets/_page-dea61fd1.css",
+    "src": "src/routes/projects/+page.css"
   }
 }
