--- a/vite-manifest.json
+++ b/vite-manifest.json
@@ -1,11 +1,11 @@
 {
   "node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "_app/immutable/start-39d5a63a.js",
+    "file": "_app/immutable/start-24754734.js",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/start.js",
     "isEntry": true,
     "imports": [
       "_index-903f4e19.js",
-      "_singletons-14ce2652.js"
+      "_singletons-730e8c88.js"
     ],
     "dynamicImports": [
       ".svelte-kit/generated/nodes/0.js",
@@ -17,30 +17,30 @@
     ]
   },
   "src/routes/+layout.svelte": {
-    "file": "_app/immutable/components/pages/_layout.svelte-31673e68.js",
+    "file": "_app/immutable/components/pages/_layout.svelte-188d7ba6.js",
     "src": "src/routes/+layout.svelte",
     "isEntry": true,
     "imports": [
       "_index-903f4e19.js",
-      "_stores-2b1ab8fc.js",
-      "_singletons-14ce2652.js",
-      "_index-4de8be6c.js"
+      "_stores-dbcc32b9.js",
+      "_singletons-730e8c88.js",
+      "_index-9d8f23b7.js"
     ],
     "css": [
-      "_app/immutable/assets/_layout-cb0a3bb0.css"
+      "_app/immutable/assets/_layout-4dad44c4.css"
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/components/error.svelte": {
-    "file": "_app/immutable/components/error.svelte-e90af0de.js",
+    "file": "_app/immutable/components/error.svelte-b7ad7353.js",
     "src": "node_modules/@sveltejs/kit/src/runtime/components/error.svelte",
     "isEntry": true,
     "imports": [
       "_index-903f4e19.js",
-      "_stores-2b1ab8fc.js"
+      "_stores-dbcc32b9.js"
     ]
   },
   "src/routes/+page.svelte": {
-    "file": "_app/immutable/components/pages/_page.svelte-2380c6b6.js",
+    "file": "_app/immutable/components/pages/_page.svelte-fc71d4a6.js",
     "src": "src/routes/+page.svelte",
     "isEntry": true,
     "imports": [
@@ -48,36 +48,37 @@
       "_constants-c3307eea.js"
     ],
     "css": [
-      "_app/immutable/assets/_page-0d38cde0.css"
+      "_app/immutable/assets/_page-d77be693.css"
     ]
   },
   "src/routes/about/+page.svelte": {
-    "file": "_app/immutable/components/pages/about/_page.svelte-bc617e94.js",
+    "file": "_app/immutable/components/pages/about/_page.svelte-162325bd.js",
     "src": "src/routes/about/+page.svelte",
     "isEntry": true,
     "imports": [
       "_index-903f4e19.js",
       "_constants-c3307eea.js",
-      "_index-4de8be6c.js"
+      "_index-9d8f23b7.js"
     ],
     "css": [
-      "_app/immutable/assets/_page-c8a605be.css"
+      "_app/immutable/assets/_page-e6315a54.css"
     ]
   },
   "src/routes/contact/+page.svelte": {
-    "file": "_app/immutable/components/pages/contact/_page.svelte-73b88364.js",
+    "file": "_app/immutable/components/pages/contact/_page.svelte-64c28397.js",
     "src": "src/routes/contact/+page.svelte",
     "isEntry": true,
     "imports": [
       "_index-903f4e19.js",
-      "_constants-c3307eea.js"
+      "_constants-c3307eea.js",
+      "_index-9d8f23b7.js"
     ],
     "css": [
-      "_app/immutable/assets/_page-c8a605be.css"
+      "_app/immutable/assets/_page-62c33c02.css"
     ]
   },
   "src/routes/projects/+page.svelte": {
-    "file": "_app/immutable/components/pages/projects/_page.svelte-890d161a.js",
+    "file": "_app/immutable/components/pages/projects/_page.svelte-2306aedc.js",
     "src": "src/routes/projects/+page.svelte",
     "isEntry": true,
     "imports": [
@@ -85,7 +86,7 @@
       "_constants-c3307eea.js"
     ],
     "css": [
-      "_app/immutable/assets/_page-dea61fd1.css"
+      "_app/immutable/assets/_page-b21179fe.css"
     ]
   },
   "src/routes/+page.js": {
@@ -120,8 +121,8 @@
       "__page-046269aa.js"
     ]
   },
-  "_singletons-14ce2652.js": {
-    "file": "_app/immutable/chunks/singletons-14ce2652.js",
+  "_singletons-730e8c88.js": {
+    "file": "_app/immutable/chunks/singletons-730e8c88.js",
     "imports": [
       "_index-903f4e19.js"
     ]
@@ -129,15 +130,15 @@
   "_index-903f4e19.js": {
     "file": "_app/immutable/chunks/index-903f4e19.js"
   },
-  "_stores-2b1ab8fc.js": {
-    "file": "_app/immutable/chunks/stores-2b1ab8fc.js",
+  "_stores-dbcc32b9.js": {
+    "file": "_app/immutable/chunks/stores-dbcc32b9.js",
     "imports": [
       "_index-903f4e19.js",
-      "_singletons-14ce2652.js"
+      "_singletons-730e8c88.js"
     ]
   },
-  "_index-4de8be6c.js": {
-    "file": "_app/immutable/chunks/index-4de8be6c.js",
+  "_index-9d8f23b7.js": {
+    "file": "_app/immutable/chunks/index-9d8f23b7.js",
     "imports": [
       "_index-903f4e19.js"
     ],
@@ -161,7 +162,7 @@
     "file": "_app/immutable/chunks/_page-046269aa.js"
   },
   ".svelte-kit/generated/nodes/0.js": {
-    "file": "_app/immutable/chunks/0-24f4c92a.js",
+    "file": "_app/immutable/chunks/0-4292670c.js",
     "src": ".svelte-kit/generated/nodes/0.js",
     "isDynamicEntry": true,
     "imports": [
@@ -169,7 +170,7 @@
     ]
   },
   ".svelte-kit/generated/nodes/1.js": {
-    "file": "_app/immutable/chunks/1-f277ff50.js",
+    "file": "_app/immutable/chunks/1-189cc0dc.js",
     "src": ".svelte-kit/generated/nodes/1.js",
     "isDynamicEntry": true,
     "imports": [
@@ -177,7 +178,7 @@
     ]
   },
   ".svelte-kit/generated/nodes/2.js": {
-    "file": "_app/immutable/chunks/2-721a7777.js",
+    "file": "_app/immutable/chunks/2-790c23b3.js",
     "src": ".svelte-kit/generated/nodes/2.js",
     "isDynamicEntry": true,
     "imports": [
@@ -186,7 +187,7 @@
     ]
   },
   ".svelte-kit/generated/nodes/3.js": {
-    "file": "_app/immutable/chunks/3-46488362.js",
+    "file": "_app/immutable/chunks/3-695973d6.js",
     "src": ".svelte-kit/generated/nodes/3.js",
     "isDynamicEntry": true,
     "imports": [
@@ -195,7 +196,7 @@
     ]
   },
   ".svelte-kit/generated/nodes/4.js": {
-    "file": "_app/immutable/chunks/4-ae65f541.js",
+    "file": "_app/immutable/chunks/4-1de75e62.js",
     "src": ".svelte-kit/generated/nodes/4.js",
     "isDynamicEntry": true,
     "imports": [
@@ -204,7 +205,7 @@
     ]
   },
   ".svelte-kit/generated/nodes/5.js": {
-    "file": "_app/immutable/chunks/5-629769cf.js",
+    "file": "_app/immutable/chunks/5-875759ff.js",
     "src": ".svelte-kit/generated/nodes/5.js",
     "isDynamicEntry": true,
     "imports": [
@@ -212,24 +213,28 @@
       "src/routes/projects/+page.svelte"
     ]
   },
+  "src/routes/+page.css": {
+    "file": "_app/immutable/assets/_page-d77be693.css",
+    "src": "src/routes/+page.css"
+  },
   "index.css": {
     "file": "_app/immutable/assets/index-af927694.css",
     "src": "index.css"
   },
-  "src/routes/+page.css": {
-    "file": "_app/immutable/assets/_page-0d38cde0.css",
-    "src": "src/routes/+page.css"
-  },
-  "src/routes/+layout.css": {
-    "file": "_app/immutable/assets/_layout-cb0a3bb0.css",
-    "src": "src/routes/+layout.css"
+  "src/routes/about/+page.css": {
+    "file": "_app/immutable/assets/_page-e6315a54.css",
+    "src": "src/routes/about/+page.css"
   },
   "src/routes/contact/+page.css": {
-    "file": "_app/immutable/assets/_page-c8a605be.css",
+    "file": "_app/immutable/assets/_page-62c33c02.css",
     "src": "src/routes/contact/+page.css"
   },
   "src/routes/projects/+page.css": {
-    "file": "_app/immutable/assets/_page-dea61fd1.css",
+    "file": "_app/immutable/assets/_page-b21179fe.css",
     "src": "src/routes/projects/+page.css"
+  },
+  "src/routes/+layout.css": {
+    "file": "_app/immutable/assets/_layout-4dad44c4.css",
+    "src": "src/routes/+layout.css"
   }
 }
