--- a/vite-manifest.json
+++ b/vite-manifest.json
@@ -1,11 +1,12 @@
 {
   "node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "_app/immutable/start-0d1714a6.js",
+    "file": "_app/immutable/start-0bfd7ba2.js",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/start.js",
     "isEntry": true,
     "imports": [
       "_index-1aa987b2.js",
-      "_singletons-5c501f71.js"
+      "_singletons-7a628dbb.js",
+      "_paths-6cd3a76e.js"
     ],
     "dynamicImports": [
       ".svelte-kit/generated/nodes/0.js",
@@ -13,17 +14,19 @@
       ".svelte-kit/generated/nodes/2.js",
       ".svelte-kit/generated/nodes/3.js",
       ".svelte-kit/generated/nodes/4.js",
-      ".svelte-kit/generated/nodes/5.js"
+      ".svelte-kit/generated/nodes/5.js",
+      ".svelte-kit/generated/nodes/6.js"
     ]
   },
   "src/routes/+layout.svelte": {
-    "file": "_app/immutable/components/pages/_layout.svelte-e2b8a480.js",
+    "file": "_app/immutable/components/pages/_layout.svelte-9b12848a.js",
     "src": "src/routes/+layout.svelte",
     "isEntry": true,
     "imports": [
       "_index-1aa987b2.js",
-      "_stores-76afeda3.js",
-      "_singletons-5c501f71.js",
+      "_stores-69302815.js",
+      "_paths-6cd3a76e.js",
+      "_singletons-7a628dbb.js",
       "_index-a2d958b0.js"
     ],
     "css": [
@@ -31,12 +34,12 @@
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/components/error.svelte": {
-    "file": "_app/immutable/components/error.svelte-241dc061.js",
+    "file": "_app/immutable/components/error.svelte-b743aed4.js",
     "src": "node_modules/@sveltejs/kit/src/runtime/components/error.svelte",
     "isEntry": true,
     "imports": [
       "_index-1aa987b2.js",
-      "_stores-76afeda3.js"
+      "_stores-69302815.js"
     ]
   },
   "src/routes/+page.svelte": {
@@ -51,8 +54,16 @@
       "_app/immutable/assets/_page-d77be693.css"
     ]
   },
+  "src/routes/[lang]/about/+page.svelte": {
+    "file": "_app/immutable/components/pages/_lang_/about/_page.svelte-61f1db9e.js",
+    "src": "src/routes/[lang]/about/+page.svelte",
+    "isEntry": true,
+    "imports": [
+      "_index-1aa987b2.js"
+    ]
+  },
   "src/routes/about/+page.svelte": {
-    "file": "_app/immutable/components/pages/about/_page.svelte-3f7c64b5.js",
+    "file": "_app/immutable/components/pages/about/_page.svelte-08449329.js",
     "src": "src/routes/about/+page.svelte",
     "isEntry": true,
     "imports": [
@@ -78,7 +89,7 @@
     ]
   },
   "src/routes/projects/+page.svelte": {
-    "file": "_app/immutable/components/pages/projects/_page.svelte-3098ca0a.js",
+    "file": "_app/immutable/components/pages/projects/_page.svelte-73606b2c.js",
     "src": "src/routes/projects/+page.svelte",
     "isEntry": true,
     "imports": [
@@ -97,12 +108,21 @@
       "__page-d86dbbba.js"
     ]
   },
+  "src/routes/[lang]/about/+page.js": {
+    "file": "_app/immutable/modules/pages/_lang_/about/_page.js-837633d4.js",
+    "src": "src/routes/[lang]/about/+page.js",
+    "isEntry": true,
+    "imports": [
+      "__page-8016b138.js"
+    ]
+  },
   "src/routes/about/+page.js": {
-    "file": "_app/immutable/modules/pages/about/_page.js-e8ccd219.js",
+    "file": "_app/immutable/modules/pages/about/_page.js-ffdf1bf1.js",
     "src": "src/routes/about/+page.js",
     "isEntry": true,
     "imports": [
-      "__page-0b0d8028.js"
+      "_paths-6cd3a76e.js",
+      "__page-feb75319.js"
     ]
   },
   "src/routes/contact/+page.js": {
@@ -114,27 +134,32 @@
     ]
   },
   "src/routes/projects/+page.js": {
-    "file": "_app/immutable/modules/pages/projects/_page.js-aa28b609.js",
+    "file": "_app/immutable/modules/pages/projects/_page.js-5805212f.js",
     "src": "src/routes/projects/+page.js",
     "isEntry": true,
     "imports": [
-      "__page-046269aa.js"
+      "_paths-6cd3a76e.js",
+      "__page-0693e3f5.js"
     ]
   },
-  "_singletons-5c501f71.js": {
-    "file": "_app/immutable/chunks/singletons-5c501f71.js",
+  "_singletons-7a628dbb.js": {
+    "file": "_app/immutable/chunks/singletons-7a628dbb.js",
     "imports": [
-      "_index-1aa987b2.js"
+      "_index-1aa987b2.js",
+      "_paths-6cd3a76e.js"
     ]
+  },
+  "_paths-6cd3a76e.js": {
+    "file": "_app/immutable/chunks/paths-6cd3a76e.js"
   },
   "_index-1aa987b2.js": {
     "file": "_app/immutable/chunks/index-1aa987b2.js"
   },
-  "_stores-76afeda3.js": {
-    "file": "_app/immutable/chunks/stores-76afeda3.js",
+  "_stores-69302815.js": {
+    "file": "_app/immutable/chunks/stores-69302815.js",
     "imports": [
       "_index-1aa987b2.js",
-      "_singletons-5c501f71.js"
+      "_singletons-7a628dbb.js"
     ]
   },
   "_index-a2d958b0.js": {
@@ -152,17 +177,26 @@
   "__page-d86dbbba.js": {
     "file": "_app/immutable/chunks/_page-d86dbbba.js"
   },
-  "__page-0b0d8028.js": {
-    "file": "_app/immutable/chunks/_page-0b0d8028.js"
+  "__page-8016b138.js": {
+    "file": "_app/immutable/chunks/_page-8016b138.js"
+  },
+  "__page-feb75319.js": {
+    "file": "_app/immutable/chunks/_page-feb75319.js",
+    "imports": [
+      "_paths-6cd3a76e.js"
+    ]
   },
   "__page-42553da0.js": {
     "file": "_app/immutable/chunks/_page-42553da0.js"
   },
-  "__page-046269aa.js": {
-    "file": "_app/immutable/chunks/_page-046269aa.js"
+  "__page-0693e3f5.js": {
+    "file": "_app/immutable/chunks/_page-0693e3f5.js",
+    "imports": [
+      "_paths-6cd3a76e.js"
+    ]
   },
   ".svelte-kit/generated/nodes/0.js": {
-    "file": "_app/immutable/chunks/0-65675dff.js",
+    "file": "_app/immutable/chunks/0-533c62f6.js",
     "src": ".svelte-kit/generated/nodes/0.js",
     "isDynamicEntry": true,
     "imports": [
@@ -170,7 +204,7 @@
     ]
   },
   ".svelte-kit/generated/nodes/1.js": {
-    "file": "_app/immutable/chunks/1-a263d3b9.js",
+    "file": "_app/immutable/chunks/1-4c128804.js",
     "src": ".svelte-kit/generated/nodes/1.js",
     "isDynamicEntry": true,
     "imports": [
@@ -187,54 +221,63 @@
     ]
   },
   ".svelte-kit/generated/nodes/3.js": {
-    "file": "_app/immutable/chunks/3-0b645f31.js",
+    "file": "_app/immutable/chunks/3-98f1caa6.js",
     "src": ".svelte-kit/generated/nodes/3.js",
     "isDynamicEntry": true,
     "imports": [
-      "__page-0b0d8028.js",
-      "src/routes/about/+page.svelte"
+      "__page-8016b138.js",
+      "src/routes/[lang]/about/+page.svelte"
     ]
   },
   ".svelte-kit/generated/nodes/4.js": {
-    "file": "_app/immutable/chunks/4-f07c199d.js",
+    "file": "_app/immutable/chunks/4-cd8895b1.js",
     "src": ".svelte-kit/generated/nodes/4.js",
+    "isDynamicEntry": true,
+    "imports": [
+      "__page-feb75319.js",
+      "src/routes/about/+page.svelte"
+    ]
+  },
+  ".svelte-kit/generated/nodes/5.js": {
+    "file": "_app/immutable/chunks/5-aa61ac14.js",
+    "src": ".svelte-kit/generated/nodes/5.js",
     "isDynamicEntry": true,
     "imports": [
       "__page-42553da0.js",
       "src/routes/contact/+page.svelte"
     ]
   },
-  ".svelte-kit/generated/nodes/5.js": {
-    "file": "_app/immutable/chunks/5-4d33b75a.js",
-    "src": ".svelte-kit/generated/nodes/5.js",
+  ".svelte-kit/generated/nodes/6.js": {
+    "file": "_app/immutable/chunks/6-b34479a3.js",
+    "src": ".svelte-kit/generated/nodes/6.js",
     "isDynamicEntry": true,
     "imports": [
-      "__page-046269aa.js",
+      "__page-0693e3f5.js",
       "src/routes/projects/+page.svelte"
     ]
-  },
-  "src/routes/+page.css": {
-    "file": "_app/immutable/assets/_page-d77be693.css",
-    "src": "src/routes/+page.css"
-  },
-  "src/routes/+layout.css": {
-    "file": "_app/immutable/assets/_layout-efc46da5.css",
-    "src": "src/routes/+layout.css"
-  },
-  "index.css": {
-    "file": "_app/immutable/assets/index-af927694.css",
-    "src": "index.css"
-  },
-  "src/routes/projects/+page.css": {
-    "file": "_app/immutable/assets/_page-b5fd4fd0.css",
-    "src": "src/routes/projects/+page.css"
   },
   "src/routes/contact/+page.css": {
     "file": "_app/immutable/assets/_page-4489d4a9.css",
     "src": "src/routes/contact/+page.css"
   },
+  "index.css": {
+    "file": "_app/immutable/assets/index-af927694.css",
+    "src": "index.css"
+  },
+  "src/routes/+page.css": {
+    "file": "_app/immutable/assets/_page-d77be693.css",
+    "src": "src/routes/+page.css"
+  },
   "src/routes/about/+page.css": {
     "file": "_app/immutable/assets/_page-68326b9b.css",
     "src": "src/routes/about/+page.css"
+  },
+  "src/routes/+layout.css": {
+    "file": "_app/immutable/assets/_layout-efc46da5.css",
+    "src": "src/routes/+layout.css"
+  },
+  "src/routes/projects/+page.css": {
+    "file": "_app/immutable/assets/_page-b5fd4fd0.css",
+    "src": "src/routes/projects/+page.css"
   }
 }
